# BODR-Image-Prompt

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSING.md  NOTICE  README.md  README_zh-CN.md  README_zh-TW.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  (+2 more)
backend/: config.py  db.py  main.py  repositories.py  schemas.py
docs/: DEVELOPMENT.md  GENERATION.md  INSTALLATION.md  OPERATIONS.md  PROJECT_STATUS.md  README_SCREENSHOT_AUDIT.md  TROUBLESHOOTING.md  generation-matrix-chatgpt-codex-impasto-florals-2026-05-01.md
frontend/: index.html
sample-data/: ATTRIBUTION.md  README.md
scripts/: appctl.sh  backup.sh  benchmark_generation_models.py  check-codex-oauth-upstream.py  codex_native_oauth_smoke.py  daemon.sh  dev.sh  export-demo-data.py  install-sample-data.sh  install.sh  ipl.service  package-release.sh  setup-runtime.sh  setup.sh  smoke-test.sh  start.sh
tests/: test_app_updates.py  test_awesome_gpt_image_2_sample_package.py  test_codex_oauth_upstream_drift.py  test_config.py  test_db.py  test_frontend_static.py  test_generation_jobs.py  test_github_pages_demo.py  test_image_store.py  test_import_drafts.py  test_import_gpt_image_2_skill.py  test_installer_release.py  test_items_api.py  test_items_multipart.py  test_openai_codex_native.py  test_prompt_template_variables.py  test_public_ci_release.py  test_public_mvp.py  test_repository_ingest.py  test_sample_data_bundle.py
(+137 files in other folders)
