[project]
name = "BODR-Image-Prompt"
version = "0.1.0"
description = "Local-first image prompt reference library"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2",
  "python-multipart>=0.0.9",
  "pillow>=10",
  "httpx>=0.27",
  "opencc-python-reimplemented>=0.1.7",
  # 2026-07-11 BIP auth/RBAC
  "argon2-cffi>=23.1",
  "pyjwt>=2.8",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[tool.setuptools]
packages = ["backend", "backend.auth", "backend.routers", "backend.services"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
